Fixed green bright date picker hover contrast

--- a/common/common.scss
+++ b/common/common.scss
@@ -58,3 +58,7 @@ ol.category-breadcrumb li {
 .topic-list-latest .ember-view:hover {
 	background-color: rgba(83,169,27,0.17);
 }
+
+.pika-button:hover {
+	background-color: #317d55;
+}
